========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'master' branch.


2020-07-05

 - Moved beancount.scripts.tutorial to beancount.reports.tutorial in preparation
   of removing beancount.reports and beancount.web.
 - Moved beancount.reports.context to beancount.parser.context in preparation of
   removing beancount.reports and beancount.web.
 - Moved beancount.reports.table to beancount.utils.table in preparation of
   removing beancount.reports and beancount.web.


2020-07-04

  - Fixed #494, invalid account used for clamping the period view
    (Equity:Conversions:Previous instead of Equity:Conversions:Current).


2020-06-27

  - Merged PR #484, some parser improvements by @dnicolodi.
  - Merged PR #488 from branch beancount/pr135_ppmarciniak_fixnetworth by
    @pmarciniak.
  - Merged branch pr131_tohojo_csvtweaks (BitBucket PR 131) by @tohojo, fixed
    encoding bug in reading the file for the date and allow customizing the
    number parser.


2020-06-26

  - Merged #480 - parser: Read input data from Python file objects by dnicolodi.


2020-06-10

  - Released 2.3.0. See #459.


2020-06-03

 - Added a 'hooks' argument to beancount.ingest.scripts_utils.ingest() replacing
   'detect_duplicates_func'. 'find_duplicate_entries()' is still inserted if no
   other filter functions are specified (I'd like to remove this eventually; not
   changing behavior here for now.)
 - Added an example for how to run the importers explictly via a Python script
   calling the ingest() function.
 - Fixed bug with explicit invocation of importers via ingest() function when
   calling the 'file' sub command.
 - Some installations of pdfminer install 'pdf2txt.py' as 'pdf2txt'. Adjusted
   ingestion example scripts.


2020-06-02

 - Modified recently added --no-cache option to also delete the cache if it
   exists. Honor the same environment variables. The motivation behind this