@@ -17,6 +17,7 @@ from beancount.core import getters
 from beancount.core import prices
 from beancount.ops import summarize
 from beancount.utils import misc_utils
+from beancount.parser import options
 
 
 # A holding, a flattened position with an account, and optionally, price and
@@ -130,6 +131,34 @@ def get_final_holdings(entries, included_account_types=None, price_map=None, dat
             holdings.append(holding)
 
     return holdings
+
+
+def get_assets_holdings(entries, options_map, currency=None):
+    """Return holdings for all assets and liabilities.
+
+    Args:
+      entries: A list of directives.
+      options_map: A dict of parsed options.
+      currency: If specified, a string, the target currency to convert all
+        holding values to.
+    Returns:
+      A list of Holding instances and a price-map.
+    """
+    # Compute a price map, to perform conversions.
+    price_map = prices.build_price_map(entries)
+
+    # Get the list of holdings.
+    account_types = options.get_account_types(options_map)
+    holdings_list = get_final_holdings(entries,
+                                       (account_types.assets,
+                                        account_types.liabilities),
+                                       price_map)
+
+    # Convert holdings to a unified currency.
+    if currency:
+        holdings_list = convert_to_currency(price_map, currency, holdings_list)
+
+    return holdings_list, price_map
 
 
 # Note: This should use the same routines as in beancount.prices.find_prices.
